counting-service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: counting-deployment
spec:
  containers:
  - name: counting
    image: valtman/counting-service:0.0.5
    ports:
    - containerPort: 9001
      name: http
      
---
apiVersion: v1
kind: Service
metadata:
  name: counting-load-balancer
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 9001
  selector:
    app: counting
  type: LoadBalancer
