dashboard-service.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dashboard
  labels:
    app: dashboard
spec:
  containers:
  - name: dashboard
    image: valtman/dashboard-service:0.0.5
    ports:
    - containerPort: 9002
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-load-balancer
  namespace: default
  labels:
    app: dashboard
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 9002
  selector:
    app: dashboard
  type: LoadBalancer
  loadBalancerIP: ""
