azure-counting-deployment-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: dashboard
        image: valtman/dashboard-service:0.0.5
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 9002
          name: dashboard
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-service
spec:
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 9002
  selector:
    app: dashboard
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: counting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: counting
  template:
    metadata:
      labels:
        app: counting
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: counting
        image: valtman/counting-service:0.0.5
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        ports:
        - containerPort: 9001
          name: http
---
apiVersion: v1
kind: Service
metadata:
  name: counting-service
spec:
  ports:
  - protocol: "TCP"
    port: 9001
    #targetPort: 9001
  selector:
    app: counting
  type: ClusterIP 
 
 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: 1val-ingress
  namespace: 1valnamespace
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /()(.*)
        pathType: Prefix
        backend:
          service:
            name: dashboard-service
            port: 
              number: 80
      - path: /counting-service(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: counting-service
            port: 
              number: 9001
